--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0px 0px;
+  margin: 0px 0px;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,64 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(57, 57, 57);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1{
+  text-align: center;
+  font-size: 50px;
+  color: cyan;
+  margin: 10px 0px;
+}
+
+.gameStatus{
+  text-align: center;
+  font-size: 30px;
+  color: wheat;
+}
+
+#board{
+  width: 210px;
+  height: 210px;
+  margin: 10px auto;
+}
+.row{
+  display: flex;
+}
+.square-btn{
+  width: 70px;
+  height: 70px;
+  font-size: 40px;
+} 
+
+#resetBtn{
+  border-radius: 12px;
+  background-color: rgb(124, 196, 255);
+  color: rgb(0, 0, 0);
+  width: 120px;
+  height: 40px;
+  font-size: 25px;
+  font-family :'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: bold;
+  display: block;
+  margin: 22px auto;
+}
+
+#historyBox{
+  font-size: 18px;
+  width: 210px;
+  margin: 10px auto;
+  color: wheat;
+}
+
+#historyBox>li{
+  margin: 6px auto;
+}
+#historyBox>li>button{
+  padding: 4px;
 }
